altv-capi/client/altv-capi.hpp


struct alt_String {
    char * data;
    unsigned long long size;
};
struct alt_StringView {
    const char * data;
    unsigned long long size;
};
struct alt_Array_MValue {
    struct alt_MValue* data;
    unsigned long long size;
    unsigned long long capacity;
};
struct alt_Array_StringView {
    struct alt_StringView* data;
    unsigned long long size;
    unsigned long long capacity;
};
CAPI struct alt_Array_StringView* alt_Array_StringView_Create();
CAPI struct alt_Array_StringView* alt_Array_StringView_Create_1(struct alt_StringView* _data, unsigned long long _size);
CAPI struct alt_Array_StringView* alt_Array_StringView_Create_2(unsigned long long _size, struct alt_StringView* fill);
CAPI struct alt_Array_StringView* alt_Array_StringView_Create_3(struct alt_Array_StringView* that);
CAPI struct alt_Array_StringView* alt_Array_StringView_Create_4(struct alt_Array_StringView* that);
CAPI void alt_Array_StringView_Assign_constArray_StringViewRef(struct alt_Array_StringView* _instance, struct alt_Array_StringView* that);
CAPI void alt_Array_StringView_Assign_Array_StringViewRefRef(struct alt_Array_StringView* _instance, struct alt_Array_StringView* that);
CAPI void alt_Array_StringView_Push(struct alt_Array_StringView* _instance, struct alt_StringView* el);
CAPI unsigned long long alt_Array_StringView_GetSize(struct alt_Array_StringView* _instance);
CAPI unsigned long long alt_Array_StringView_GetCapacity(struct alt_Array_StringView* _instance);
CAPI struct alt_StringView* alt_Array_StringView_Access_uint64_t(struct alt_Array_StringView* _instance, unsigned long long key);
CAPI struct alt_StringView* alt_Array_StringView_Access_uint64_t_1(struct alt_Array_StringView* _instance, unsigned long long key);
CAPI struct alt_StringView* alt_Array_StringView_begin(struct alt_Array_StringView* _instance);
CAPI struct alt_StringView* alt_Array_StringView_begin_1(struct alt_Array_StringView* _instance);
CAPI struct alt_StringView* alt_Array_StringView_end(struct alt_Array_StringView* _instance);
CAPI struct alt_StringView* alt_Array_StringView_end_1(struct alt_Array_StringView* _instance);
struct alt_MValue {
    enum alt_MValue_Type type;
    struct alt_MValue_Storage* storage;
};
CAPI struct alt_MValue* alt_MValue_Create();
CAPI struct alt_MValue* alt_MValue_Create_1(_Bool* val);
CAPI struct alt_MValue* alt_MValue_Create_2(long long* val);
CAPI struct alt_MValue* alt_MValue_Create_3(unsigned long long* val);
CAPI struct alt_MValue* alt_MValue_Create_4(double* val);
CAPI struct alt_MValue* alt_MValue_Create_5(struct alt_String* val);
CAPI struct alt_MValue* alt_MValue_Create_6(struct alt_Array_MValue* val);
CAPI struct alt_MValue* alt_MValue_Create_8(struct alt_IBaseObject** val);
CAPI struct alt_MValue* alt_MValue_Create_9(struct alt_MValue_Function* val);
CAPI struct alt_MValue* alt_MValue_Create_10(int val);
CAPI struct alt_MValue* alt_MValue_Create_11(unsigned int val);
CAPI struct alt_MValue* alt_MValue_Create_12(char* val);
CAPI struct alt_MValue* alt_MValue_Create_14(struct alt_MValue* that);
CAPI void alt_MValue_Assign_constMValueRef(struct alt_MValue* _instance, struct alt_MValue* that);
CAPI _Bool alt_MValue_ToBool(struct alt_MValue* _instance);
CAPI long long alt_MValue_ToInt(struct alt_MValue* _instance);
CAPI unsigned long long alt_MValue_ToUInt(struct alt_MValue* _instance);
CAPI struct alt_String* alt_MValue_ToString(struct alt_MValue* _instance);
CAPI enum alt_MValue_Type alt_MValue_GetType(struct alt_MValue* _instance);
enum alt_MValue_Type {
    ALT_MVALUE_TYPE_NIL = 0,
    ALT_MVALUE_TYPE_BOOL = 1,
    ALT_MVALUE_TYPE_INT = 2,
    ALT_MVALUE_TYPE_UINT = 3,
    ALT_MVALUE_TYPE_DOUBLE = 4,
    ALT_MVALUE_TYPE_STRING = 5,
    ALT_MVALUE_TYPE_LIST = 6,
    ALT_MVALUE_TYPE_DICT = 7,
    ALT_MVALUE_TYPE_ENTITY = 8,
    ALT_MVALUE_TYPE_FUNCTION = 9
};
typedef void alt_MValue_Nil;
typedef _Bool alt_MValue_Bool;
typedef long long alt_MValue_Int;
typedef unsigned long long alt_MValue_UInt;
typedef double alt_MValue_Double;
typedef struct alt_String alt_MValue_String;
typedef struct alt_Array_MValue alt_MValue_List;
typedef struct alt_IBaseObject* alt_MValue_Entity;
struct alt_MValue_Function {
    void * invoker;
};
CAPI void alt_MValue_Function_free(struct alt_MValue_Function* ptr);
CAPI struct alt_MValue_Function* alt_MValue_Function_Create();
CAPI struct alt_MValue_Function* alt_MValue_Function_Create_1(struct alt_MValue_Function* _p0);
CAPI struct alt_MValue_Function* alt_MValue_Function_Create_2(struct alt_MValue_Function* _p0);
CAPI void alt_MValue_Function_Assign_constMValue_FunctionRef(struct alt_MValue_Function* _instance, struct alt_MValue_Function* _p0);
CAPI void alt_MValue_Function_Assign_MValue_FunctionRefRef(struct alt_MValue_Function* _instance, struct alt_MValue_Function* _p0);
CAPI void alt_MValue_TypeMismatchException_free(struct alt_MValue_TypeMismatchException* ptr);
CAPI char* alt_MValue_TypeMismatchException_what(struct alt_MValue_TypeMismatchException* _instance);
CAPI struct alt_MValue_TypeMismatchException* alt_MValue_TypeMismatchException_Create(struct alt_MValue_TypeMismatchException* _p0);
CAPI struct alt_MValue_TypeMismatchException* alt_MValue_TypeMismatchException_Create_1(struct alt_MValue_TypeMismatchException* _p0);
CAPI void alt_MValue_TypeMismatchException_Assign_constMValue_TypeMismatchExceptionRef(struct alt_MValue_TypeMismatchException* _instance, struct alt_MValue_TypeMismatchException* _p0);
CAPI void alt_MValue_TypeMismatchException_Assign_MValue_TypeMismatchExceptionRefRef(struct alt_MValue_TypeMismatchException* _instance, struct alt_MValue_TypeMismatchException* _p0);
CAPI struct alt_MValue_TypeMismatchException* alt_MValue_TypeMismatchException_Create_2();
struct alt_MValue__Storage {
    unsigned long long refCount;
};
struct alt_MValue_Storage__Bool {
    unsigned long long refCount;
    _Bool value;
};
struct alt_MValue_Storage_longlong {
    unsigned long long refCount;
    long long value;
};
struct alt_IBaseObject {};