client/src/altv_capi.rs

ay_StringView > ( ) , 24usize , concat ! ( "Size of: " , stringify ! ( alt_Array_StringView ) ) ) ; assert_eq ! ( :: std :: mem :: align_of :: < alt_Array_StringView > ( ) , 8usize , concat ! ( "Alignment of " , stringify ! ( alt_Array_StringView ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_Array_StringView > ( ) ) ) . data as * const _ as usize } , 0usize , concat ! ( "Offset of field: " , stringify ! ( alt_Array_StringView ) , "::" , stringify ! ( data ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_Array_StringView > ( ) ) ) . size as * const _ as usize } , 8usize , concat ! ( "Offset of field: " , stringify ! ( alt_Array_StringView ) , "::" , stringify ! ( size ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_Array_StringView > ( ) ) ) . capacity as * const _ as usize } , 16usize , concat ! ( "Offset of field: " , stringify ! ( alt_Array_StringView ) , "::" , stringify ! ( capacity ) ) ) ; } extern "C" { pub fn alt_Array_StringView_Create ( ) -> * mut alt_Array_StringView ; } extern "C" { pub fn alt_Array_StringView_Create_1 ( _data : * mut alt_StringView , _size : :: std :: os :: raw :: c_ulonglong ) -> * mut alt_Array_StringView ; } extern "C" { pub fn alt_Array_StringView_Create_2 ( _size : :: std :: os :: raw :: c_ulonglong , fill : * mut alt_StringView ) -> * mut alt_Array_StringView ; } extern "C" { pub fn alt_Array_StringView_Create_3 ( that : * mut alt_Array_StringView ) -> * mut alt_Array_StringView ; } extern "C" { pub fn alt_Array_StringView_Create_4 ( that : * mut alt_Array_StringView ) -> * mut alt_Array_StringView ; } extern "C" { pub fn alt_Array_StringView_Assign_constArray_StringViewRef ( _instance : * mut alt_Array_StringView , that : * mut alt_Array_StringView ) ; } extern "C" { pub fn alt_Array_StringView_Assign_Array_StringViewRefRef ( _instance : * mut alt_Array_StringView , that : * mut alt_Array_StringView ) ; } extern "C" { pub fn alt_Array_StringView_Push ( _instance : * mut alt_Array_StringView , el : * mut alt_StringView ) ; } extern "C" { pub fn alt_Array_StringView_GetSize ( _instance : * mut alt_Array_StringView ) -> :: std :: os :: raw :: c_ulonglong ; } extern "C" { pub fn alt_Array_StringView_GetCapacity ( _instance : * mut alt_Array_StringView ) -> :: std :: os :: raw :: c_ulonglong ; } extern "C" { pub fn alt_Array_StringView_Access_uint64_t ( _instance : * mut alt_Array_StringView , key : :: std :: os :: raw :: c_ulonglong ) -> * mut alt_StringView ; } extern "C" { pub fn alt_Array_StringView_Access_uint64_t_1 ( _instance : * mut alt_Array_StringView , key : :: std :: os :: raw :: c_ulonglong ) -> * mut alt_StringView ; } extern "C" { pub fn alt_Array_StringView_begin ( _instance : * mut alt_Array_StringView ) -> * mut alt_StringView ; } extern "C" { pub fn alt_Array_StringView_begin_1 ( _instance : * mut alt_Array_StringView ) -> * mut alt_StringView ; } extern "C" { pub fn alt_Array_StringView_end ( _instance : * mut alt_Array_StringView ) -> * mut alt_StringView ; } extern "C" { pub fn alt_Array_StringView_end_1 ( _instance : * mut alt_Array_StringView ) -> * mut alt_StringView ; } # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_MValue { pub type_ : alt_MValue_Type , pub storage : * mut alt_MValue_Storage , } # [ test ] fn bindgen_test_layout_alt_MValue ( ) { assert_eq ! ( :: std :: mem :: size_of :: < alt_MValue > ( ) , 16usize , concat ! ( "Size of: " , stringify ! ( alt_MValue ) ) ) ; assert_eq ! ( :: std :: mem :: align_of :: < alt_MValue > ( ) , 8usize , concat ! ( "Alignment of " , stringify ! ( alt_MValue ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_MValue > ( ) ) ) . type_ as * const _ as usize } , 0usize , concat ! ( "Offset of field: " , stringify ! ( alt_MValue ) , "::" , stringify ! ( type_ ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_MValue > ( ) ) ) . storage as * const _ as usize } , 8usize , concat ! ( "Offset of field: " , stringify ! ( alt_MValue ) , "::" , stringify ! ( storage ) ) ) ; } extern "C" { pub fn alt_MValue_Create ( ) -> * mut alt_MValue ; } extern "C" { pub fn alt_MValue_Create_1 ( val : * mut bool ) -> * mut alt_MValue ; } extern "C" { pub fn alt_MValue_Create_2 ( val : * mut :: std :: os :: raw :: c_longlong ) -> * mut alt_MValue ; } extern "C" { pub fn alt_MValue_Create_3 ( val : * mut :: std :: os :: raw :: c_ulonglong ) -> * mut alt_MValue ; } extern "C" { pub fn alt_MValue_Create_4 ( val : * mut f64 ) -> * mut alt_MValue ; } extern "C" { pub fn alt_MValue_Create_5 ( val : * mut alt_String ) -> * mut alt_MValue ; } extern "C" { pub fn alt_MValue_Create_6 ( val : * mut alt_Array_MValue ) -> * mut alt_MValue ; } extern "C" { pub fn alt_MValue_Create_8 ( val : * mut * mut alt_IBaseObject ) -> * mut alt_MValue ; } extern "C" { pub fn alt_MValue_Create_9 ( val : * mut alt_MValue_Function ) -> * mut alt_MValue ; } extern "C" { pub fn alt_MValue_Create_10 ( val : :: std :: os :: raw :: c_int ) -> * mut alt_MValue ; } extern "C" { pub fn alt_MValue_Create_11 ( val : :: std :: os :: raw :: c_uint ) -> * mut alt_MValue ; } extern "C" { pub fn alt_MValue_Create_12 ( val : * mut :: std :: os :: raw :: c_char ) -> * mut alt_MValue ; } extern "C" { pub fn alt_MValue_Create_14 ( that : * mut alt_MValue ) -> * mut alt_MValue ; } extern "C" { pub fn alt_MValue_Assign_constMValueRef ( _instance : * mut alt_MValue , that : * mut alt_MValue ) ; } extern "C" { pub fn alt_MValue_ToBool ( _instance : * mut alt_MValue ) -> bool ; } extern "C" { pub fn alt_MValue_ToInt ( _instance : * mut alt_MValue ) -> :: std :: os :: raw :: c_longlong ; } extern "C" { pub fn alt_MValue_ToUInt ( _instance : * mut alt_MValue ) -> :: std :: os :: raw :: c_ulonglong ; } extern "C" { pub fn alt_MValue_ToString ( _instance : * mut alt_MValue ) -> * mut alt_String ; } extern "C" { pub fn alt_MValue_GetType ( _instance : * mut alt_MValue ) -> alt_MValue_Type ; } pub const alt_MValue_Type_ALT_MVALUE_TYPE_NIL : alt_MValue_Type = 0 ; pub const alt_MValue_Type_ALT_MVALUE_TYPE_BOOL : alt_MValue_Type = 1 ; pub const alt_MValue_Type_ALT_MVALUE_TYPE_INT : alt_MValue_Type = 2 ; pub const alt_MValue_Type_ALT_MVALUE_TYPE_UINT : alt_MValue_Type = 3 ; pub const alt_MValue_Type_ALT_MVALUE_TYPE_DOUBLE : alt_MValue_Type = 4 ; pub const alt_MValue_Type_ALT_MVALUE_TYPE_STRING : alt_MValue_Type = 5 ; pub const alt_MValue_Type_ALT_MVALUE_TYPE_LIST : alt_MValue_Type = 6 ; pub const alt_MValue_Type_ALT_MVALUE_TYPE_DICT : alt_MValue_Type = 7 ; pub const alt_MValue_Type_ALT_MVALUE_TYPE_ENTITY : alt_MValue_Type = 8 ; pub const alt_MValue_Type_ALT_MVALUE_TYPE_FUNCTION : alt_MValue_Type = 9 ; pub type alt_MValue_Type = i32 ; pub type alt_MValue_Nil = :: std :: os :: raw :: c_void ; pub type alt_MValue_Bool = bool ; pub type alt_MValue_Int = :: std :: os :: raw :: c_longlong ; pub type alt_MValue_UInt = :: std :: os :: raw :: c_ulonglong ; pub type alt_MValue_Double = f64 ; pub type alt_MValue_String = alt_String ; pub type alt_MValue_List = alt_Array_MValue ; pub type alt_MValue_Entity = * mut alt_IBaseObject ; # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_MValue_Function { pub invoker : * mut :: std :: os :: raw :: c_void , } # [ test ] fn bindgen_test_layout_alt_MValue_Function ( ) { assert_eq ! ( :: std :: mem :: size_of :: < alt_MValue_Function > ( ) , 8usize , concat ! ( "Size of: " , stringify ! ( alt_MValue_Function ) ) ) ; assert_eq ! ( :: std :: mem :: align_of :: < alt_MValue_Function > ( ) , 8usize , concat ! ( "Alignment of " , stringify ! ( alt_MValue_Function ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_MValue_Function > ( ) ) ) . invoker as * const _ as usize } , 0usize , concat ! ( "Offset of field: " , stringify ! ( alt_MValue_Function ) , "::" , stringify ! ( invoker ) ) ) ; } extern "C" { pub fn alt_MValue_Function_free ( ptr : * mut alt_MValue_Function ) ; } extern "C" { pub fn alt_MValue_Function_Create ( ) -> * mut alt_MValue_Function ; } extern "C" { pub fn alt_MValue_Function_Create_1 ( _p0 : * mut alt_MValue_Function ) -> * mut alt_MValue_Function ; } extern "C" { pub fn alt_MValue_Function_Create_2 ( _p0 : * mut alt_MValue_Function ) -> * mut alt_MValue_Function ; } extern "C" { pub fn alt_MValue_Function_Assign_constMValue_FunctionRef ( _instance : * mut alt_MValue_Function , _p0 : * mut alt_MValue_Function ) ; } extern "C" { pub fn alt_MValue_Function_Assign_MValue_FunctionRefRef ( _instance : * mut alt_MValue_Function , _p0 : * mut alt_MValue_Function ) ; } # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_MValue_TypeMismatchException { _unused : [ u8 ; 0 ] , } extern "C" { pub fn alt_MValue_TypeMismatchException_free ( ptr : * mut alt_MValue_TypeMismatchException ) ; } extern "C" { pub fn alt_MValue_TypeMismatchException_what ( _instance : * mut alt_MValue_TypeMismatchException ) -> * mut :: std :: os :: raw :: c_char ; } extern "C" { pub fn alt_MValue_TypeMismatchException_Create ( _p0 : * mut alt_MValue_TypeMismatchException ) -> * mut alt_MValue_TypeMismatchException ; } extern "C" { pub fn alt_MValue_TypeMismatchException_Create_1 ( _p0 : * mut alt_MValue_TypeMismatchException ) -> * mut alt_MValue_TypeMismatchException ; } extern "C" { pub fn alt_MValue_TypeMismatchException_Assign_constMValue_TypeMismatchExceptionRef ( _instance : * mut alt_MValue_TypeMismatchException , _p0 : * mut alt_MValue_TypeMismatchException ) ; } extern "C" { pub fn alt_MValue_TypeMismatchException_Assign_MValue_TypeMismatchExceptionRefRef ( _instance : * mut alt_MValue_TypeMismatchException , _p0 : * mut alt_MValue_TypeMismatchException ) ; } extern "C" { pub fn alt_MValue_TypeMismatchException_Create_2 ( ) -> * mut alt_MValue_TypeMismatchException ; } # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_MValue__Storage { pub refCount : :: std :: os :: raw :: c_ulonglong , } # [ test ] fn bindgen_test_layout_alt_MValue__Storage ( ) { assert_eq ! ( :: std :: mem :: size_of :: < alt_MValue__Storage > ( ) , 8usize , concat ! ( "Size of: " , stringify ! ( alt_MValue__Storage ) ) ) ; assert_eq ! ( :: std :: mem :: align_of :: < alt_MValue__Storage > ( ) , 8usize , concat ! ( "Alignment of " , stringify ! ( alt_MValue__Storage ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_MValue__Storage > ( ) ) ) . refCount as * const _ as usize } , 0usize , concat ! ( "Offset of field: " , stringify ! ( alt_MValue__Storage ) , "::" , stringify ! ( refCount ) ) ) ; } # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_MValue_Storage__Bool { pub refCount : :: std :: os :: raw :: c_ulonglong , pub value : bool , } # [ test ] fn bindgen_test_layout_alt_MValue_Storage__Bool ( ) { assert_eq ! ( :: std :: mem :: size_of :: < alt_MValue_Storage__Bool > ( ) , 16usize , concat ! ( "Size of: " , stringify ! ( alt_MValue_Storage__Bool ) ) ) ; assert_eq ! ( :: std :: mem :: align_of :: < alt_MValue_Storage__Bool > ( ) , 8usize , concat ! ( "Alignment of " , stringify ! ( alt_MValue_Storage__Bool ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_MValue_Storage__Bool > ( ) ) ) . refCount as * const _ as usize } , 0usize , concat ! ( "Offset of field: " , stringify ! ( alt_MValue_Storage__Bool ) , "::" , stringify ! ( refCount ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_MValue_Storage__Bool > ( ) ) ) . value as * const _ as usize } , 8usize , concat ! ( "Offset of field: " , stringify ! ( alt_MValue_Storage__Bool ) , "::" , stringify ! ( value ) ) ) ; } # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_MValue_Storage_longlong { pub refCount : :: std :: os :: raw :: c_ulonglong , pub value : :: std :: os :: raw :: c_longlong , } # [ test ] fn bindgen_test_layout_alt_MValue_Storage_longlong ( ) { assert_eq ! ( :: std :: mem :: size_of :: < alt_MValue_Storage_longlong > ( ) , 16usize , concat ! ( "Size of: " , stringify ! ( alt_MValue_Storage_longlong ) ) ) ; asser